syntax = "proto3";

message ArraySimpleProtobuf {
    repeated bool boolean = 1;
    repeated int32 int32 = 2;
    repeated uint32 uint32 = 3;
    repeated int64 int64 = 4;
    repeated uint64 uint64 = 5;
    repeated float float = 6;
    repeated double double = 7;
    repeated string string = 8;
    repeated bytes bytes = 9;
    repeated ArraySimpleProtobuf object = 10;
}