syntax = "proto3";

message CommentTagAtomicUnion {
    repeated CommentTagAtomicUnion.Type value = 1;
    message Type {
        oneof value {
            double v1 = 1;
            string v2 = 2;
        }
    }
}