syntax = "proto3";

message DynamicSimple {
    map<string, double> value = 1;
}