syntax = "proto3";

message ObjectGenericAlias {
    message Alias {
        required string value = 1;
    }
}