syntax = "proto3";

message ObjectIntersection {
    required string email = 1;
    required string name = 2;
    required bool vulnerable = 3;
}