syntax = "proto3";

message ObjectNullable {
    repeated ObjectNullable.IProduct value = 1;
    message IProduct {
        required string name = 1;
        required ObjectNullable.IManufacturer manufacturer = 2;
        optional ObjectNullable.IBrand brand = 3;
        oneof similar {
            ObjectNullable.IBrand v4 = 4;
            ObjectNullable.IManufacturer v5 = 5;
        }
    }

    message IManufacturer {
        required string type = 1;
        required string name = 2;
    }

    message IBrand {
        required string type = 1;
        required string name = 2;
    }
}