syntax = "proto3";

message TemplateConstant {
    repeated TemplateConstant.Type value = 1;
    message Type {
        required string prefix = 1;
        required string postfix = 2;
        required string combined = 3;
    }
}