syntax = "proto3";

message TypeTagFormat {
    required string uuid = 1;
    required string email = 2;
    required string url = 3;
    required string ipv4 = 4;
    required string ipv6 = 5;
    required string date = 6;
    required string date_time = 7;
}