syntax = "proto3";

message TypeTagPattern {
    required string uuid = 1;
    required string email = 2;
    required string ipv4 = 3;
    required string ipv6 = 4;
}