syntax = "proto3";

message TypeTagType {
    repeated TypeTagType.Type value = 1;
    message Type {
        required int32 int = 1;
        required uint32 uint = 2;
        required int32 int32 = 3;
        required uint32 uint32 = 4;
        required int64 int64 = 5;
        required uint64 uint64 = 6;
        required float float = 7;
    }
}