syntax = "proto3";

message ArrayHierarchicalPointer {
  repeated ArrayHierarchicalPointer.ICompany value = 1;
  message ICompany {
    required double id = 1;
    required double serial = 2;
    required string name = 3;
    required ArrayHierarchicalPointer.ITimestamp established_at = 4;
    repeated ArrayHierarchicalPointer.IDepartment departments = 5;
  }

  message ITimestamp {
    required double time = 1;
    required double zone = 2;
  }

  message IDepartment {
    required double id = 1;
    required string code = 2;
    required double sales = 3;
    required ArrayHierarchicalPointer.ITimestamp created_at = 4;
    repeated ArrayHierarchicalPointer.IEmployee employees = 5;
  }

  message IEmployee {
    required double id = 1;
    required string name = 2;
    required double age = 3;
    required double grade = 4;
    required ArrayHierarchicalPointer.ITimestamp employed_at = 5;
  }
}