syntax = "proto3";

message CommentTagLength {
  repeat CommentTagLength.Type value = 1;
  message Type {
    required string fixed = 1;
    required string minimum = 2;
    required string maximum = 3;
    required string minimum_and_maximum = 4;
    required string equal = 5;
  }
}