syntax = "proto3";

message ConstantAtomicWrapper {
    message IPointer_lt_boolean_gt_ {
        bool value = 1;
    }

    message IPointer_lt_number_gt_ {
        double value = 1;
    }

    message IPointer_lt_string_gt_ {
        string value = 1;
    }
}

message __Main {
    _alt_ConstantAtomicWrapper.IPointer_lt_boolean_gt__comma__space_ConstantAtomicWrapper.IPointer_lt_number_gt__comma__space_ConstantAtomicWrapper.IPointer_lt_string_gt__agt_ value = 1;
}

message _alt_ConstantAtomicWrapper {
    message IPointer_lt_boolean_gt__comma__space_ConstantAtomicWrapper {
        message IPointer_lt_number_gt__comma__space_ConstantAtomicWrapper {
            message IPointer_lt_string_gt__agt_ {
                ConstantAtomicWrapper.IPointer_lt_boolean_gt_ v0 = 1;
                ConstantAtomicWrapper.IPointer_lt_number_gt_ v1 = 2;
                ConstantAtomicWrapper.IPointer_lt_string_gt_ v2 = 3;
            }
        }
    }
}