syntax = "proto3";

message MapSimpleProtobufOptional {
  map<string, bool> boolean = 1;
  map<string, int32> int32 = 2;
  map<string, int64> bigint = 3;
  map<string, double> double = 4;
  map<string, string> string = 5;
  map<string, bytes> bytes = 6;
  map<string, MapSimpleProtobufOptional> objects = 7;
}