syntax = "proto3";

message ObjectHttpNullable {
  optional bool boolean = 1;
  optional int64 bigint = 2;
  optional double number = 3;
  optional string string = 4;
  optional bool constantBoolean = 5;
  optional uint64 constantBigint = 6;
  optional int32 constantNumber = 7;
  optional string constantString = 8;
  repeat double nullableArray = 9;
}