syntax = "proto3";

message ObjectInternal {
  required string id = 1;
  required string name = 2;
}