syntax = "proto3";

message Partial_lt_ObjectPartial {
  message IBase_gt_ {
    optional bool boolean = 1;
    optional double number = 2;
    optional string string = 3;
    repeated double array = 4;
    optional ObjectPartial.IBase object = 5;
  }
}

message ObjectPartial {
  message IBase {
    required bool boolean = 1;
    required double number = 2;
    required string string = 3;
    repeated double array = 4;
    optional ObjectPartial.IBase object = 5;
  }
}