syntax = "proto3";

message ObjectPrimitive {
  message IArticle {
    required string id = 1;
    required string extension = 2;
    required string title = 3;
    required string body = 4;
    repeated ObjectPrimitive.IFile files = 5;
    required bool secret = 6;
    required string created_at = 7;
  }

  message IFile {
    required string id = 1;
    required string name = 2;
    required string extension = 3;
    required string url = 4;
    required string created_at = 5;
  }
}