syntax = "proto3";

message TypeTagNaN {
  required double value = 1;
  required double ranged = 2;
  required double minimum = 3;
  required double maximum = 4;
  required double multipleOf = 5;
  required int32 typed = 6;
}