syntax = "proto3";

message TypeTagRangeBigInt {
  repeated TypeTagRangeBigInt.Type value = 1;
  message Type {
    required int64 greater = 1;
    required int64 greater_equal = 2;
    required int64 less = 3;
    required int64 less_equal = 4;
    required int64 greater_less = 5;
    required int64 greater_equal_less = 6;
    required int64 greater_less_equal = 7;
    required int64 greater_equal_less_equal = 8;
    required int64 equal = 9;
  }
}